# hammock-public

./: .gitignore  README.md  demo.html  flake.nix  pyproject.toml  pyrightconfig.json  tsconfig.json
hammock/: anki.py  cache.py  cluster.py  color.py  core.py  embedding.py  gunicorn.py  plot.py  util.py  web.py
hammock/calibre/: core.py  detect_core.py
stubs/InstructorEmbedding/: __init__.pyi
stubs/arxiv/: __init__.pyi
stubs/flask_compress/: __init__.pyi
stubs/gunicorn/: config.pyi
stubs/gunicorn/app/: wsgiapp.pyi
stubs/gutenbergpy/: gutenbergcache.pyi  textget.pyi
stubs/hdbscan/: __init__.pyi
stubs/networkx/: __init__.pyi
stubs/nltk/: __init__.pyi  tokenize.pyi
stubs/numba/core/: errors.pyi
stubs/numpy/: __init__.pyi  linalg.pyi
stubs/numpy/lib/: stride_tricks.pyi
stubs/plotly/: subplots.pyi
stubs/plotly/colors/: __init__.pyi  qualitative.pyi
stubs/plotly/graph_objects/: __init__.pyi
stubs/plotly/graph_objects/layout/: __init__.pyi  scene.pyi
stubs/scipy/spatial/: distance.pyi
stubs/sentence_transformers/: __init__.pyi  models.pyi
stubs/sklearn/: _base.pyi  linear_model.pyi  metrics.pyi  preprocessing.pyi
stubs/sklearn_extra/: cluster.pyi
stubs/transformers/: __init__.pyi
stubs/umap/: __init__.pyi
stubs/wikipedia/: __init__.pyi
templates/: books.html  index.html  main.html  plotly.js
